--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -48,6 +48,7 @@
 @use "object/project/p-faq";
 @use "object/project/p-guideline";
 @use "object/project/p-environment";
+@use "object/project/p-about";
 
 /*
   3.3 - Utility
