--- a/assets/sass/object/project/_p-faq.scss
+++ b/assets/sass/object/project/_p-faq.scss
@@ -30,8 +30,12 @@ p-faq
             font-weight: 700;
             line-height: 1rem;
             position: absolute;
-            top: 8px;
-            left: -2.8rem;
+            top: 5px;
+            left: -2rem;
+            @include inc.mq(tab) {
+              top: 8px;
+              left: -2.8rem;
+            }
           }
         }
       }
@@ -50,7 +54,11 @@ p-faq
             line-height: 1rem;
             position: absolute;
             top: 3px;
-            left: -2.7rem;
+            left: -1.9rem;
+            @include inc.mq(tab) {
+              top: 3px;
+              left: -2.7rem;
+            }
           }
         }
       }
@@ -59,58 +67,4 @@ p-faq
     }
     }
   }
-  
-  // }
-  // &__card.active {
-  //   & > dd {
-  //     visibility: visible;
-  //     opacity: 1;
-  //     height: auto;
-  //     @include inc.sizing(padding-top, sp, 15px, wide, 4px);
-  //     @include inc.sizing(padding-bottom, wide, 30px, sp, 20px);
-  //   }
-  // }
-  // &__ol {
-  //   margin-top: 1em;
-  //   margin-left: 2em;
-  //   list-style-type: decimal;
-  // }
-  // &__button {
-  //   @include inc.sizing(height, wide, 40px, sp, 27px);
-  //   @include inc.sizing(width, wide, 40px, sp, 27px);
-  //   border-radius: 99px;
-  //   background-color: inc.$color-blu;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   & > span {
-  //     width: 100%;
-  //     height: 100%;
-  //     position: relative;
-  //     &::before {
-  //       content: " ";
-  //       transition: opacity 0.3s ease-out;
-  //       position: absolute;
-  //       transform: translate(-50%, -50%);
-  //       top: 50%;
-  //       left: 50%;
-  //       background-color: inc.$color-wht;
-  //       @include inc.sizing(width, wide, 2px, sp, 1px);
-  //       @include inc.sizing(height, wide, 16px, sp, 11px);
-  //     }
-  //     &::after {
-  //       content: " ";
-  //       position: absolute;
-  //       transform: translate(-50%, -50%);
-  //       top: 50%;
-  //       left: 50%;
-  //       background-color: inc.$color-wht;
-  //       @include inc.sizing(height, wide, 2px, sp, 1px);
-  //       @include inc.sizing(width, wide, 16px, sp, 11px);
-  //     }
-  //   }
-  // }
-  // &__button.active > span::before {
-  //   opacity: 0;
-  // }
 }
