--- a/assets/sass/object/project/_p-text-box.scss
+++ b/assets/sass/object/project/_p-text-box.scss
@@ -10,7 +10,7 @@ p-text-box
     border-color: inc.$color-light-blu;
     @include inc.sizing(border-width, wide, 7px, sp, 3px);
     @include inc.sizing(border-radius, wide, 16px, sp, 8px);
-    h2 {
+    &--h2 {
       @include inc.sizingRem(font-size, wide, 20px, sp, 16px);
       @include inc.sizing(line-height, wide, 32px, sp, 24px);
       font-weight: 700;
@@ -19,9 +19,91 @@ p-text-box
       background: inc.$color-light-blu;
       @include inc.sizing(padding-top, wide, 24px, sp, 16px);
       @include inc.sizing(padding-bottom, wide, 24px, sp, 16px);
+      span {
+        @include inc.sizingRem(font-size, wide, 14px, sp, 12px);
+        display: block;
+        font-weight: 500;
+        @include inc.sizing(margin-bottom, wide, 24px, sp, 16px);
+      }
     }
     &--inner {
       @include inc.sizing(padding, wide, 48px, sp, 24px);
+    }
+    &--fig {
+      display: block;
+      @include inc.mq(tab) {
+        display: flex;
+        justify-content: space-between;
+        gap: 1.5rem 2.5rem;
+      }
+      figure {
+        order: 1;
+        @include inc.mq(tab) {
+          order: 2;
+        }
+        img {
+          margin: 0 auto 1rem;
+          width: 50%;
+          @include inc.mq(tab) {
+            margin: 0;
+            width: 100%;
+          }
+        }
+      }
+    }
+    &--dl {
+      @include inc.sizing(margin-bottom, wide, 48px, sp, 32px);
+      order: 2;
+      @include inc.mq(tab) {
+        order: 1;
+      }
+    }
+    &--dl > div {
+      display: flex;
+      gap: 1rem 1.5rem;
+      & + div {
+        margin-top: 1rem;
+      }
+    }
+    &--dt span {
+      @include inc.sizingRem(font-size, wide, 14px, sp, 12px);
+      @include inc.sizing(padding-top, wide, 6px, sp, 4px);
+      @include inc.sizing(padding-bottom, wide, 6px, sp, 4px);
+      background: inc.$color-light-blu;
+      border-radius: 2rem;
+      display: inline-block;
+      width: 5.5rem;
+      text-align: center
+    }
+    &--dd {
+      @include inc.sizingRem(font-size, wide, 16px, sp, 14px);
+    }
+    &--flow {
+      position: relative;
+    }
+    &--flow + &--flow {
+      @include inc.sizing(margin-top, wide, 64px, sp, 48px);
+    }
+    &--flow + &--flow::before {
+      content: "";
+      width: 26px;
+      height: 16px;
+      border-style: solid;
+      border-width: 16px 13px 0 13px;
+      border-color: #1b6fc3 transparent transparent transparent;
+      position: absolute;
+      top: -26px;
+      left: calc(50% - 13px);
+      @include inc.mq(lap) {
+        width: 32px;
+        height: 22px;
+        border-width: 22px 16px 0 16px;
+        top: -32px;
+        left: calc(50% - 16px);
+      }
+    }
+    & + .p-text-box--bluBox {
+      @include inc.sizing(margin-top, wide, 32px, sp, 28px);
     }
   }
   // & > p:not(:last-child) {
