--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -49,6 +49,7 @@
 @use "object/project/p-guideline";
 @use "object/project/p-environment";
 @use "object/project/p-about";
+@use "object/project/p-people";
 
 /*
   3.3 - Utility
