--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,32 @@ c-text
 /*
 c-arrow
 -----------------------------------------------------*/
+.c-arrow {
+  display: block;
+  width: 224px;
+  height: 70px;
+  border-radius: 35px;
+  border: 1px solid #1B6EC3;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+}
+.c-arrow span {
+  color: #1B6EC3;
+  border-radius: 35px;
+  font-weight: 700;
+  width: 100%;
+  height: 100%;
+  padding: 0 2.5rem;
+  text-align: left;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: clamp(0.875rem, 0.36vw + 0.775rem, 1.125rem);
+  background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 1.5rem) 50% #fff;
+}
 /*
 c-br
 -----------------------------------------------------*/
@@ -2421,6 +2447,158 @@ p-about
   .p-about--philosophy {
     text-align: center;
   }
+}
+
+/*
+p-people
+-----------------------------------------------------*/
+.p-people--intro {
+  display: block;
+}
+.p-people--intro--div {
+  width: calc(39% + 3rem);
+  padding-right: 3rem;
+}
+.p-people--intro--div figure {
+  margin: 0 0 24px;
+  position: relative;
+}
+.p-people--intro--div figure figcaption {
+  width: clamp(134px, 2.35vw + 123.2px, 160px);
+  height: clamp(134px, 2.35vw + 123.2px, 160px);
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+  border-radius: 50%;
+  background: #009EA7;
+  color: #fff;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 24px;
+  bottom: auto;
+  right: -96px;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro--div figure figcaption {
+    top: auto;
+    bottom: -12px;
+    right: -50px;
+  }
+}
+.p-people--intro--div h2 {
+  text-align: center;
+  font-weight: 700;
+  font-size: clamp(1rem, 0.45vw + 0.86875rem, 1.3125rem);
+}
+.p-people--intro--div h2 span {
+  display: block;
+  margin-top: clamp(6px, 0.54vw + 3.5px, 12px);
+  font-weight: 500;
+  font-size: clamp(0.75rem, 0.18vw + 0.7rem, 0.875rem);
+}
+.p-people--intro--div:nth-child(even) figure figcaption {
+  top: 24px;
+  bottom: auto;
+  left: auto;
+  right: -96px;
+}
+.p-people--intro--div.intro_02 figure figcaption {
+  background: #009AB5;
+}
+.p-people--intro--div.intro_03 figure figcaption {
+  background: #008BBA;
+}
+.p-people--intro--div.intro_04 figure figcaption {
+  background: #0075BC;
+}
+.p-people--intro--div.intro_05 figure figcaption {
+  background: #0F68B2;
+}
+@media screen and (min-width: 768px) {
+  .p-people--intro {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 2rem;
+  }
+}
+.p-people--bnr {
+  background: url(../img/people/zadankai_bg.png) no-repeat 50% 0;
+  background-size: cover;
+  padding: 52px 0 0;
+  text-align: center;
+}
+.p-people--bnr--title {
+  text-align: center;
+  margin: 0 auto 20px;
+}
+.p-people--bnr--title img {
+  display: block;
+  margin: 0 auto;
+}
+.p-people--bnr--people {
+  position: relative;
+  z-index: 0;
+  margin-top: -48px;
+}
+.p-people--schedule {
+  background: #ebf6f9;
+  border-radius: 15px;
+  padding: 52px 72px;
+}
+.p-people--schedule dl {
+  -webkit-column-count: 2;
+     -moz-column-count: 2;
+          column-count: 2;
+}
+.p-people--schedule dl div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 2.5rem;
+}
+.p-people--schedule dl div dt {
+  padding: 10px 0;
+  position: relative;
+  width: 3rem;
+}
+.p-people--schedule dl div dt::after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  background: #469ca5;
+  border-radius: 50%;
+  position: absolute;
+  right: -19px;
+  top: 19px;
+}
+.p-people--schedule dl div dd {
+  padding: 10px 0;
+  position: relative;
+}
+.p-people--schedule dl div dd::before {
+  content: "";
+  width: 1px;
+  height: 100%;
+  background: #469ca5;
+  position: absolute;
+  top: 0;
+  left: -26px;
+}
+.p-people--schedule dl div:first-child dd::before {
+  top: 20px;
+}
+.p-people--schedule dl div:last-child dd::before {
+  top: -20px;
 }
 
 /* =====================================================
