--- a/assets/sass/object/component/_c-arrow.scss
+++ b/assets/sass/object/component/_c-arrow.scss
@@ -4,9 +4,31 @@
 c-arrow
 -----------------------------------------------------*/
 .c-arrow {
-  // position: relative;
-  // display: inline-block;
-  // height: 9.4px;
-  // width: 6.1px;
-  // background-image: url(../img/v.svg);
+  display: block;
+  width: 224px;
+  height: 70px;
+  border-radius: 35px;
+  border: 1px solid inc.$color-blu;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+  @include inc.mq(vr) {
+  }
+  span {
+    color: inc.$color-blu;
+    border-radius: 35px;
+    font-weight: 700;
+    width: 100%;
+    height: 100%;
+    padding: 0 2.5rem;
+    text-align: left;
+    display: grid;
+    align-items: center;
+    @include inc.sizingRem(font-size, wide, 18px, sp, 14px);
+    background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 1.5rem) 50% inc.$color-wht;
+    @include inc.mq(vr) {
+      // background-size: 20px;
+      // background-position: calc(100% - 3rem) 50%;
+    }
+  }
 }
