--- a/assets/sass/object/component/_c-text.scss
+++ b/assets/sass/object/component/_c-text.scss
@@ -6,10 +6,10 @@ c-text
 .c-text {
   &--h1 {
     @include inc.sizingRem(font-size, wide, 44px, sp, 24px);
-    @include inc.sizing(line-height, wide, 44px, sp, 24px);
+    @include inc.sizing(line-height, wide, 80px, sp, 42px);
     @include inc.sizing(margin-bottom, wide, 112px, sp, 48px);
     font-weight: 700;
-    line-height: 1.6rem;
+    //line-height: 1.6rem;
     padding-left: 4%;
     @include inc.mq(vr) {
       padding-left: 0;
@@ -19,6 +19,14 @@ c-text
       @include inc.sizing(margin-bottom, wide, 24px, sp, 12px);
       color: inc.$color-blu2;
       display: block;
+      line-height: 1;
+    }
+    &.--peopel {
+      @include inc.sizing(margin-bottom, wide, 32px, sp, 16px);
+      span {
+        color: inc.$color-blk;
+        @include inc.sizing(margin-bottom, wide, 80px, sp, 32px);
+      }
     }
   }
   &--h2 {
@@ -26,6 +34,27 @@ c-text
     @include inc.sizing(line-height, wide, 24px, sp, 20px);
     @include inc.sizing(margin-bottom, wide, 24px, sp, 16px);
     font-weight: 700;
+    &.--peopel {
+      @include inc.sizingRem(font-size, wide, 22px, sp, 16px);
+      margin-bottom: 80px;
+      padding-left: 4%;
+      @include inc.mq(vr) {
+        padding-left: 0;
+      }
+      span {
+        @include inc.sizingRem(font-size, wide, 16px, sp, 12px);
+        font-weight: 500;
+      }
+    }
+    &.--peopel2 {
+      span {
+        @include inc.sizingRem(font-size, wide, 16px, sp, 12px);
+        @include inc.sizing(margin-bottom, wide, 32px, sp, 24px);
+        color: inc.$color-grn;
+        font-weight: 700;
+        display: block;
+      }
+    }
   }
   &--h3 {
     @include inc.sizingRem(font-size, wide, 20px, sp, 16px);
@@ -34,6 +63,11 @@ c-text
     @include inc.sizing(padding-left, wide, 16px, sp, 12px);
     border-left: 1px solid inc.$color-blu;
     font-weight: 500;
+    &.--peopel {
+      border: none;
+      padding-left: 0;
+      font-weight: 700;
+    }
   }
   &--h4 {
     @include inc.sizingRem(font-size, wide, 18px, sp, 14px);
