--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,10 @@ l-wrapper
           justify-content: space-between;
 }
 
+.l-wrapper__outer {
+  padding-top: clamp(32px, 7.22vw - 1.2px, 112px);
+}
+
 .l-wrapper--left {
   max-width: 100%;
   width: 100%;
@@ -123,6 +127,9 @@ l-wrapper
     padding-left: calc(50% - 304px);
     padding-top: clamp(96px, 28.47vw - 268.4px, 178px);
   }
+}
+.l-wrapper--right.--peopel {
+  padding-top: clamp(48px, 22.22vw - 236.4px, 112px);
 }
 
 /*
@@ -256,15 +263,86 @@ l-hero
   }
 }
 
+.l-hero--people {
+  padding: 0;
+}
+.l-hero--people figure {
+  border-radius: 0;
+  margin-top: 0rem;
+  background: #009EA7;
+  position: relative;
+  padding-top: clamp(224px, 31.41vw + 79.5px, 572px);
+}
+@media screen and (min-width: 900px) {
+  .l-hero--people figure {
+    border-radius: 0.8rem 0 0 0.8rem;
+  }
+}
+.l-hero--people figure figcaption {
+  width: clamp(108px, 6.5vw + 78.1px, 180px);
+  height: clamp(108px, 6.5vw + 78.1px, 180px);
+  font-size: clamp(0.625rem, 0.54vw + 0.46875rem, 1rem);
+  color: #009EA7;
+  border-radius: 50%;
+  background: #fff;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translateX(-160%);
+          transform: translateX(-160%);
+  margin: auto;
+}
+@media screen and (min-width: 900px) {
+  .l-hero--people figure figcaption {
+    left: 50%;
+    -webkit-transform: translateX(40%);
+            transform: translateX(40%);
+  }
+}
+.l-hero--people figure img {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-20%);
+          transform: translateX(-20%);
+  margin: auto;
+  width: auto;
+  height: clamp(248px, 39.17vw + 67.8px, 682px);
+}
+@media screen and (min-width: 900px) {
+  .l-hero--people figure img {
+    left: 50%;
+    -webkit-transform: translateX(-80%);
+            transform: translateX(-80%);
+  }
+}
+@media screen and (min-width: 900px) {
+  .l-hero--people {
+    padding: 0 0 0 8%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .l-hero--people {
+    padding: 0 0 0 calc(50% - 304px);
+  }
+}
+
 /*
 c-text
 -----------------------------------------------------*/
 .c-text--h1 {
   font-size: clamp(1.5rem, 1.81vw + 0.975rem, 2.75rem);
-  line-height: clamp(24px, 1.81vw + 15.6px, 44px);
+  line-height: clamp(42px, 3.43vw + 26.2px, 80px);
   margin-bottom: clamp(48px, 5.78vw + 21.4px, 112px);
   font-weight: 700;
-  line-height: 1.6rem;
   padding-left: 4%;
 }
 @media screen and (min-width: 1280px) {
@@ -277,12 +355,41 @@ c-text
   margin-bottom: clamp(12px, 1.08vw + 7.1px, 24px);
   color: #008BBA;
   display: block;
+  line-height: 1;
+}
+.c-text--h1.--peopel {
+  margin-bottom: clamp(16px, 1.44vw + 9.4px, 32px);
+}
+.c-text--h1.--peopel span {
+  color: #171717;
+  margin-bottom: clamp(32px, 4.33vw + 12.1px, 80px);
 }
 .c-text--h2 {
   font-size: clamp(1.25rem, 0.36vw + 1.15rem, 1.5rem);
   line-height: clamp(20px, 0.36vw + 18.4px, 24px);
   margin-bottom: clamp(16px, 0.72vw + 12.7px, 24px);
   font-weight: 700;
+}
+.c-text--h2.--peopel {
+  font-size: clamp(1rem, 0.54vw + 0.84375rem, 1.375rem);
+  margin-bottom: 80px;
+  padding-left: 4%;
+}
+@media screen and (min-width: 1280px) {
+  .c-text--h2.--peopel {
+    padding-left: 0;
+  }
+}
+.c-text--h2.--peopel span {
+  font-size: clamp(0.75rem, 0.36vw + 0.65rem, 1rem);
+  font-weight: 500;
+}
+.c-text--h2.--peopel2 span {
+  font-size: clamp(0.75rem, 0.36vw + 0.65rem, 1rem);
+  margin-bottom: clamp(24px, 0.72vw + 20.7px, 32px);
+  color: #009EA7;
+  font-weight: 700;
+  display: block;
 }
 .c-text--h3 {
   font-size: clamp(1rem, 0.36vw + 0.9rem, 1.25rem);
@@ -291,6 +398,11 @@ c-text
   padding-left: clamp(12px, 0.36vw + 10.4px, 16px);
   border-left: 1px solid #1B6EC3;
   font-weight: 500;
+}
+.c-text--h3.--peopel {
+  border: none;
+  padding-left: 0;
+  font-weight: 700;
 }
 .c-text--h4 {
   font-size: clamp(0.875rem, 0.36vw + 0.775rem, 1.125rem);
@@ -2653,10 +2765,12 @@ p-people
   border-radius: 15px;
   padding: 52px 72px;
 }
-.p-people--schedule dl {
-  -webkit-column-count: 2;
-     -moz-column-count: 2;
-          column-count: 2;
+@media screen and (min-width: 900px) {
+  .p-people--schedule dl {
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
+  }
 }
 .p-people--schedule dl div {
   display: -webkit-box;
