--- a/assets/sass/layout/_l-hero.scss
+++ b/assets/sass/layout/_l-hero.scss
@@ -25,3 +25,60 @@ l-hero
         }
     }
 }
+
+.l-hero--people {
+    //padding: 0 0 0 8%;
+    padding: 0;
+    figure {
+        border-radius: 0;
+        @include inc.mq(tab) {
+            border-radius: 0.8rem 0 0 .8rem;
+        }
+        margin-top: 0rem;
+        background: inc.$color-grn;
+        position: relative;
+        //padding-top: 572px;
+        @include inc.sizing(padding-top, wide, 572px, sp, 224px);
+        figcaption {
+            @include inc.sizing(width, wide, 180px, sp, 108px);
+            @include inc.sizing(height, wide, 180px, sp, 108px);
+            @include inc.sizingRem(font-size, wide, 16px, sp, 10px);
+            color: inc.$color-grn;
+            border-radius: 50%;
+            background: inc.$color-wht;
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            text-align: center;
+            position: absolute;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-160%);
+            margin: auto;
+            @include inc.mq(tab) {
+                left: 50%;
+                transform: translateX(40%);
+            }
+        }
+        img {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-20%);
+            margin: auto;
+            width: auto;
+            @include inc.sizing(height, wide, 682px, sp, 248px);
+            @include inc.mq(tab) {
+                left: 50%;
+                transform: translateX(-80%);
+            }
+        }
+    }
+    @include inc.mq(tab) {
+        padding: 0 0 0 8%;
+    }
+    @include inc.mq(vr) {
+        padding: 0 0 0 calc(50% - 304px);
+    }
+}
